change QRegion to QList for dbus plasma call

--change how dbus arguments are sent to Plasma
and a QList arguments for this

BUG:418559